[project]
name = "image-editor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "diffusers @ git+https://github.com/huggingface/diffusers.git",
    "transformers",
    "accelerate",
    "Pillow",
    "sentencepiece",
    "protobuf",
    "peft",
    "mflux",
]

[project.scripts]
outpaint = "image_editor.cli:main"
inpaint = "image_editor.inpaint:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
