[project]
name = "image-editor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Pillow",
    "mflux",
    "flask",
]

[project.scripts]
outpaint = "image_editor.cli:main"
inpaint = "image_editor.inpaint:main"
image-editor-web = "image_editor.web:main"

[project.optional-dependencies]
reframe = [
    "plyfile>=1.1.4",
    "sharp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sharp = { git = "https://github.com/apple/ml-sharp" }
